* `Kiba::Extend::Job.output?` no longer fails if given job returns Nil (PR#194)
* `Reshape::FieldsToFieldGroupWithConstant` constant value is no longer added to rows with no values in the renamed/remapped value fields, when fieldmap length == 1. (PR#195)

=== Added
* Ability to pass `find` argument to `Clean::RegexpFindReplaceFieldVals` as a `Regexp` object. Not sure why this was not the default initial behavior, but here we are! (PR#196)

=== Changed

=== Deleted

=== Deprecated/Will break in a future version

=== Dev

* Improve error handling for resolution of lookups for individual jobs (PR#191)

== Releases

=== 4.0.1 - 2023-09-13

* Simplification of requirements for `IterativeCleanup` usage
* Complete documentation for `IterativeCleanup`
* Switch to kramdown Markdown conversion for YARD

=== 4.0.0 - 2023-09-11
==== Breaking
* Nested `job.show_me`, `job.tell_me`, and `job.verbosity` config settings have been removed. (They were deprecated in 3.2.0)
* `Kiba::Common::Sources` and `Kiba::Common::Destinations` are no longer supported. To use an external source or destination class, subclass it in a `Kiba::Extend` source or destination class that extends `Kiba::Extend::Sourceable` or `Kiba::Extend::Destinationable` (PR#139)
* Using a supplied file registry entry as the destination of a job raises an error, since the definition of a supplied entry is that it is not created by a job in the project. (PR#139)

==== Added
.New destinations
* `Destinations::Marc` (PR#138)
* `Destinations::Lambda` (PR#139)

.New sources
* `Sources::CSV` (PR#139)
* `Sources::Enumerable` (PR#139)
* `Sources::JsonDir` (PR#140)

.New job types
* `Jobs::JsonToCsvJob` (PR#140)

.New transforms
* `Clean::EnsureConsistentFields` (PR#140)
* `Delete::FieldnamesStartingWith` (PR#156)
* `Explode::RowsFromGroupedMultivalFields` (PR#165)
* `Fingerprint::FlagChanged` (PR#155)
* `Fingerprint::MergeCorrected` (PR#157)
* `Marc::FilterRecords::ById` (PR#138)
* `Marc::FilterRecords::WithLambda` (PR#138)